--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-.container{
-  @apply mx-auto rounded border
+body {
+  background-color:#fef8f1;
 }
+
+.container {
+  @apply mx-auto
+}
+
