--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,10 @@
 
 body {
   background-color:#fef8f1;
-}
-
-.container {
-  @apply mx-auto
-}
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: 350;
+  font-style: normal;
+  line-height: 100%;
+  letter-spacing: -0.01em;
+  }
 
