--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,31 @@ body {
   letter-spacing: -0.01em;
   }
 
+.block {
+  display: block;
+  border: none;
+  cursor: pointer;
+  position:absolute;
+  bottom: 5%;
+}
+
+.btn {
+  display: block;
+  cursor: pointer;
+  position: absolute;
+  bottom: 0;
+}
+
+.form-center {
+  position: relative;
+  display:flex;
+  justify-content: center;
+}
+
+.center {
+    margin: 0;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%) 
+}
